# comfyUI-Realtime-Lora

./: .gitignore  README.md  __init__.py  anima_config_template.py  anima_lora_trainer.py  clipboard_image_loader.py  flux_klein_debiaser_node.py  flux_vae_debiaser_node.py  lora_analyzer_v2.py  model_layer_analyzer.py  musubi_qwen_image_edit_lora_trainer.py  musubi_qwen_image_lora_trainer.py  musubi_wan_lora_trainer.py  musubi_zimage_lora_trainer.py  pyproject.toml  qwen3_4b_text_encoder_debiaser_node.py  qwen3_8b_text_encoder_debiaser_node.py  realtime_lora_trainer.py  scheduled_lora_loader.py  sd15_config_template.py  sd15_lora_trainer.py  sdxl_config_template.py  sdxl_lora_trainer.py  selective_lora_loader.py  zimage_deep_debiaser_node.py
web/js/: dynamic_inputs.js  flux_klein_debiaser_ui.js  flux_vae_debiaser_ui.js  qwen3_4b_text_encoder_debiaser_ui.js  qwen3_8b_text_encoder_debiaser_ui.js  zimage_deep_debiaser_ui.js
workflows/: Clippy Reloaded - image from clipboard - zimage.json  Lora Analysis and Block Control Demo- ADVANCED - Z-Image.json  TrainingOnlyWorkflow_Z-Image_demo.json
workflows/Lora Analysis, Block and Model Editing/: Lora Analysis and Block Control Demo - Z-Image.json  Lora Analysis and Block Control Demo- ADVANCED - Z-Image.json  Model Layer Editor - Zimage.json  Scheduled Lora Loader Demo - zimage.json
workflows/Training/: AnimaDemo-SDSCRIPTS.json
