[project]
name = "comfyui-realtime-lora"
description = "Train, analyze, and selectively by block load LoRAs inside ComfyUI.  Supports Z-Image, Qwen Image, Qwen Image Edit, SDXL, FLUX, Wan 2.2, and SD 1.5.  Image of the day node also included allowing image sourcing in workflow from many sites. Image load from clipboard node - Clippy Reloaded. Easy image insertion into your workflows from anywhere."
version = "2.0.0"
license = "MIT"
authors = [
    { name = "Peter Neill" }
]
readme = "README.md"
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/ShootTheSound/comfyUI-Realtime-Lora"
Repository = "https://github.com/ShootTheSound/comfyUI-Realtime-Lora"
Issues = "https://github.com/ShootTheSound/comfyUI-Realtime-Lora/issues"

[tool.comfy]
PublisherId = "shootthesound"
DisplayName = "-realtime-lora"
Icon = ""
